# BaldrApp

./: .gitignore  README.md  flake.nix  pyproject.toml
baldrapp/apps/baldr_closed_loop_app/: closed_loop_pyqtgraph.py
baldrapp/apps/paranal_simulator/: baldr_sim_control_gui.py  baldr_sim_updated_runtime_control.py  heimbal_simulation_servers.sh  shm_creator_sim  shm_creator_sim.cpp
baldrapp/apps/paranal_simulator/fake_configs/: phasemask_properties.json
baldrapp/common/: baldr_core.py  fresnel.py  phasescreens.py  spectrum.py  utilities.py
baldrapp/playground/: seidr_run.py
baldrapp/playground/onsky_sims/: baldr_CL_sim.py  baldr_naomi_fast_mono_config_v2.json  instructions.txt
baldrapp/playground/onsky_sims/analysis_scripts/: make_baldr_residual_movie_batches.py  merge_baldr_h5_residuals_to_fits_cube_only_masked.py  merge_baldr_h5_residuals_to_fits_masked.py  plot_baldr_h5_batches.py  plot_baldr_h5_batches_inner_mask.py
