[build-system]
requires = [
    "setuptools>=82.0.1",
    "setuptools-scm>=10.0.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "BaldrApp"
version = "0.1.7"
description = "Simulating Baldr - the Zernike Wavefront Sensor for Asgard"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Benjamin Courtney-Barrer", email= "benjamin.courtney-barrer@anu.edu.au"},
]
license = "MIT"
dependencies = [
    "astropy>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "poppy>=1.1.2",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.14.0",
    "pyzelda",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "shmview>=0.0.10",
    "streamlit>=1.58.0",
    "zmq>=0.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.scripts]
closed-loop-pyqtgraph = "baldrapp.apps.baldr_closed_loop_app:closed_loop_pyqtgraph.main"
baldr-fresnel-app = "baldrapp.apps.baldr_alignment_app:Baldr_Fresnel_App.main"


[tool.setuptools.packages.find]
where = ["./"]
include = ["baldrapp", "baldrapp.*"]

[tool.uv.sources]
pyzelda = { git = "https://github.com/courtney-barrer/pyZELDA#egg=b42aaea5c8a47026783a15391df5e058360ea15e" }
